# LittleConv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
example/: CMakeLists.txt  build_example.sh
example/cifar10_quick/: CMakeLists.txt  cifar10_quick.cpp
example/lenet-5/: CMakeLists.txt  lenet.cpp
example/mlp/: CMakeLists.txt  mlp.cpp
example/resnet/: CMakeLists.txt  model.hpp  resnet.cpp
example/vgg16/: CMakeLists.txt  vgg16.cpp  vgg16.hpp
include/licon/: common.hpp  licon.hpp
include/licon/io/: dataset.hpp  file_io.hpp
include/licon/nn/: init.hpp  net.hpp  operation_functor.hpp  operation_node.hpp
include/licon/nn/functor/: channel_concat.hpp  elt_wise_sum.hpp  path.hpp
include/licon/nn/node/: ave_pool.hpp  batch_norm.hpp  channel_concat.hpp  conv.hpp  cross_entropy_loss.hpp  dropout.hpp  elt_wise_sum.hpp  elu.hpp  linear.hpp  loss.hpp  max_pool.hpp  neuron.hpp  neuron_squential.hpp  neuron_stack.hpp  pool.hpp  relu.hpp  selu.hpp  sigmoid.hpp  softmax.hpp  softplus.hpp  tanh.hpp
include/licon/optim/: adam.hpp  lambda_lr.hpp  lr_scheduler.hpp  optim.hpp  rmsprop.hpp  sgd.hpp  step_lr.hpp
include/licon/utils/: ematrix_args.hpp  etensor.hpp  etensor_args.hpp  evaluation.hpp  im2col.hpp  math.hpp  serialize.hpp  trainer.hpp  transformer.hpp
src/: CMakeLists.txt
src/io/: dataset.cpp  file_io.cpp
src/nn/: ave_pool.cpp  batch_norm.cpp  channel_concat.cpp  channel_concat_functor.cpp  conv.cpp  cross_entropy_loss.cpp  dropout.cpp  elt_wise_sum.cpp  elt_wise_sum_functor.cpp  elu.cpp  linear.cpp  max_pool.cpp  neuron_squential.cpp  path_functor.cpp  relu.cpp  selu.cpp  sigmoid.cpp  softmax.cpp  softplus.cpp  tanh.cpp
src/optim/: adam.cpp  lambda_lr.cpp  rmsprop.cpp  sgd.cpp  step_lr.cpp
src/utils/: classify_trainer.cpp  evaluation.cpp
