project(LITTLECONV_EXAMPLE)
cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    MESSAGE(STATUS "current platform: Linux ")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -std=c++11 -pthread")
    link_directories(/home/shanwei/wzp_workspace/tools/little_conv/lib)
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Darwin")
    MESSAGE(STATUS "current platform: MACOS")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -std=c++11")
    link_directories(/Users/wzp/little_conv/lib)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
ADD_SUBDIRECTORY(mlp)
ADD_SUBDIRECTORY(lenet-5)
ADD_SUBDIRECTORY(cifar10_quick)
ADD_SUBDIRECTORY(vgg16)